Add Aria-Labels for accessibility

--- a/core/templates/core/appointments/appointments_dashboard.html
+++ b/core/templates/core/appointments/appointments_dashboard.html
@@ -92,7 +92,7 @@
     </div>
 </div>
 
-<a href="{% url 'manager_dashboard' %}" class="dashboard-nav-link">⬅
+<a href="{% url 'manager_dashboard' %}" class="dashboard-nav-link" aria-label="Go to Manager Dashboard">⬅
     Back to Dashboard</a>
 {% endblock %}
 
