--- a/core/templates/core/appointments/book_appointment.html
+++ b/core/templates/core/appointments/book_appointment.html
@@ -59,7 +59,7 @@
 
         <div class="form-actions">
             <button type="submit" class="btn btn-success">📅 Book Appointment</button>
-            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary" aria-label="Cancel Booking">Cancel</a>
         </div>
     </form>
 </div>
