--- a/core/templates/core/appointments/edit_appointment.html
+++ b/core/templates/core/appointments/edit_appointment.html
@@ -83,7 +83,7 @@
             <button type="submit" class="btn btn-primary" id="submit-btn">
                 <i class="fas fa-save"></i> Update Appointment
             </button>
-            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary">
+            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary" aria-label="Cancel Edit">
                 <i class="fas fa-times"></i> Cancel
             </a>
         </div>
