--- a/core/templates/core/pets/add_pet.html
+++ b/core/templates/core/pets/add_pet.html
@@ -51,7 +51,7 @@
 
         <div class="form-buttons">
             <button type="submit" class="btn btn-success" id="submitBtn">Submit Pet for Approval</button>
-            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'client_dashboard' %}" class="btn btn-secondary" aria-label="Cancel">Cancel</a>
         </div>
     </form>
 </div>
