--- a/core/templates/core/pets/delete_pet.html
+++ b/core/templates/core/pets/delete_pet.html
@@ -58,7 +58,7 @@
             <button type="submit" class="btn-danger">
                 Yes
             </button>
-            <a href="{% url 'client_dashboard' %}" class="btn-secondary">
+            <a href="{% url 'client_dashboard' %}" class="btn-secondary" aria-label="Cancel">
                 Cancel
             </a>
         </div>
