--- a/core/templates/core/services/delete_service.html
+++ b/core/templates/core/services/delete_service.html
@@ -87,7 +87,7 @@
                 🗑️ Yes, Delete Service
             </button>
         </form>
-        <a href="{% url 'manage_services' %}" class="btn btn-secondary">
+        <a href="{% url 'manage_services' %}" class="btn btn-secondary" aria-label="Cancel">
             ❌ Cancel
         </a>
     </div>
