--- a/core/templates/core/users/pending_approval.html
+++ b/core/templates/core/users/pending_approval.html
@@ -27,11 +27,11 @@
     </div>
 
     <div class="pending-actions">
-        <a href="{% url 'logout' %}" class="btn-action btn-logout">
+        <a href="{% url 'logout' %}" class="btn-action btn-logout" aria-label="Sign Out">
             <i class="fas fa-sign-out-alt"></i>
             Sign Out
         </a>
-        <a href="mailto:support@riverdogstudio.com" class="btn-action btn-contact">
+        <a href="mailto:support@riverdogstudio.com" class="btn-action btn-contact" aria-label="Contact Support">
             <i class="fas fa-envelope"></i>
             Contact Support
         </a>
