--- a/core/templates/core/services/create_service.html
+++ b/core/templates/core/services/create_service.html
@@ -58,7 +58,7 @@
 
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">Create Service</button>
-            <a href="{% url 'manage_services' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'manage_services' %}" class="btn btn-secondary" aria-label="Cancel">Cancel</a>
         </div>
     </form>
 </div>
