--- a/core/templates/core/users/manager_delete_user.html
+++ b/core/templates/core/users/manager_delete_user.html
@@ -80,7 +80,7 @@
                 🗑️ Yes, Delete User
             </button>
         </form>
-        <a href="{% url 'approve_users' %}" class="btn btn-secondary">
+        <a href="{% url 'approve_users' %}" class="btn btn-secondary" aria-label="Cancel User Deletion">
             ❌ Cancel
         </a>
     </div>
