Clean up code with linters

--- a/core/templates/core/appointments/appointments_dashboard.html
+++ b/core/templates/core/appointments/appointments_dashboard.html
@@ -85,7 +85,7 @@
 <!-- Modal for Appointment Details -->
 <div id="appointmentModal" class="appointment-modal">
     <div class="appointment-modal-content">
-        <span id="closeModal" class="modal-close-btn">&times;</span>
+        <span id="closeModal" class="modal-close-btn">x</span>
         <h3>Appointment Details</h3>
         <div id="modalContent"></div>
         <div id="modalActions" class="modal-actions"></div>
