--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -146,7 +146,7 @@
                     </div>
                 </div>
                 <div class="footer-right">
-                    <span class="footer-copyright">&copy; 2025 Kerem Haeger</span>
+                    <span class="footer-copyright">© 2025 Kerem Haeger</span>
                 </div>
             </div>
         </div>
