--- a/templates/400.html
+++ b/templates/400.html
@@ -63,8 +63,9 @@
         </a>
         {% endif %}
 
-        <a href="javascript:history.back()" class="btn-action btn-secondary">
-            <i class="fas fa-arrow-left"></i>
+        <a href="#" class="btn-action btn-secondary" onclick="history.back(); return false;"
+            aria-label="Go back and try again">
+            <i class="fas fa-arrow-left" aria-hidden="true"></i>
             Go Back & Try Again
         </a>
     </div>
