--- a/templates/500.html
+++ b/templates/500.html
@@ -55,8 +55,9 @@
         </a>
         {% endif %}
 
-        <a href="javascript:location.reload()" class="btn-action btn-secondary">
-            <i class="fas fa-redo"></i>
+        <a href="#" class="btn-action btn-secondary" onclick="location.reload(); return false;"
+            aria-label="Reload the page">
+            <i class="fas fa-redo" aria-hidden="true"></i>
             Try Again
         </a>
     </div>
