--- a/templates/403.html
+++ b/templates/403.html
@@ -61,8 +61,9 @@
             Sign In
         </a>
 
-        <a href="javascript:history.back()" class="btn-action btn-secondary">
-            <i class="fas fa-arrow-left"></i>
+        <a href="#" class="btn-action btn-secondary" onclick="history.back(); return false;"
+            aria-label="Go back to the previous page">
+            <i class="fas fa-arrow-left" aria-hidden="true"></i>
             Go Back
         </a>
         {% endif %}
