Add aria-labels on login and register pages

--- a/booking_system/templates/registration/login.html
+++ b/booking_system/templates/registration/login.html
@@ -44,7 +44,8 @@
         </form>
 
         <div class="auth-link">
-            <p>Don't have an account? <a href="{% url 'register' %}">Create one here</a></p>
+            <p>Don't have an account? <a href="{% url 'register' %}" aria-label="Create an account">Create one here</a>
+            </p>
         </div>
     </div>
 </div>
