--- a/booking_system/templates/registration/register.html
+++ b/booking_system/templates/registration/register.html
@@ -78,7 +78,8 @@
     </form>
 
     <div class="auth-link">
-        <p>Already have an account? <a href="{% url 'login' %}">Sign in here</a></p>
+        <p>Already have an account? <a href="{% url 'login' %}" aria-label="Sign in to your account">Sign in here</a>
+        </p>
     </div>
 </div>
 {% endblock %}
