--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
     {% block extra_css %}{% endblock %}
+    <link rel="icon" type="image/png" href="{% static 'core/images/grooming_icon.png' %}">
 </head>
 
 <body>
