--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -140,6 +140,10 @@
                             aria-label="Go to Facebook">
                             <i class="fa-brands fa-square-facebook"></i>
                         </a>
+                        <a href="https://github.com/Kerem-Haeger" target="_blank" rel="noopener noreferrer"
+                            class="social-link" aria-label="Go to my Github page">
+                            <i class="fa-brands fa-github"></i>
+                        </a>
                         <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
                             class="social-link" aria-label="Go to Instagram">
                             <i class="fa-brands fa-instagram"></i>
@@ -147,7 +151,10 @@
                     </div>
                 </div>
                 <div class="footer-right">
-                    <span class="footer-copyright">© 2025 Kerem Haeger</span>
+                    <a href="https://github.com/Kerem-Haeger" target="_blank" rel="noopener noreferrer"
+                        class="creator-link" aria-label="Go to my Github page">
+                        <span class="footer-copyright">© 2025 Kerem Haeger</span>
+                    </a>
                 </div>
             </div>
         </div>
