--- a/core/templates/core/appointments/book_appointment.html
+++ b/core/templates/core/appointments/book_appointment.html
@@ -54,7 +54,7 @@
         <div class="form-group">
             {{ form.voucher_code.label_tag }}
             {{ form.voucher_code|add_class:"form-control" }}
-            <div class="form-help">Optional: Enter a voucher code for discounts</div>
+            <div class="form-help">This feature is coming soon!</div>
         </div>
 
         <div class="form-actions">
