Add linkedin link in footer

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -144,6 +144,10 @@
                             class="social-link" aria-label="Go to my Github page">
                             <i class="fa-brands fa-github"></i>
                         </a>
+                        <a href="https://www.linkedin.com/in/kerem-haeger/" target="_blank" rel="noopener noreferrer"
+                            class="social-link" aria-label="Go to my LinkedIn page">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
                         <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer"
                             class="social-link" aria-label="Go to Instagram">
                             <i class="fa-brands fa-instagram"></i>
