Work on README and fix CSS issue with buttons

--- a/core/templates/core/pets/delete_pet.html
+++ b/core/templates/core/pets/delete_pet.html
@@ -55,10 +55,10 @@
     <form method="post">
         {% csrf_token %}
         <div class="action-buttons">
-            <button type="submit" class="btn-danger">
+            <button type="submit" class="btn btn-danger">
                 Yes
             </button>
-            <a href="{% url 'client_dashboard' %}" class="btn-secondary" aria-label="Cancel">
+            <a href="{% url 'client_dashboard' %}" class=" btn btn-secondary" aria-label="Cancel">
                 Cancel
             </a>
         </div>
