Add UX message and slight styling change

--- a/core/static/core/css/pet_management.css
+++ b/core/static/core/css/pet_management.css
@@ -56,6 +56,10 @@
     display: block;
 }
 
+.dashboard-subtitle {
+    margin: 0.5rem 0;
+}
+
 /* Search styling */
 .list-header {
     display: flex;
